syntax = "proto3";
package product;
option go_package = "product";

message RequestEmpty {}

message Coordinate {
  float lon = 1;
  float lat = 2;
}

message Accompaniment { string name = 1; }

message Picture { string src = 1; }

message Gallery {
  int32 main = 1;
  repeated Picture pictures = 2; 
}

message Category {
  string name = 1;
}

message Location {
  string address = 1;
  string cpc = 2;
  string zone = 3;
  Coordinate location = 4;
}

message Schedule {
  string date = 1;
  string start_am = 2;
  string end_am = 3;
  string start_pm = 4;
  string end_pm = 5;
}

message Product {
  string id = 1; 
  string name = 2;
  string category = 3;
  repeated string gastronomies = 4;
  string description = 5;
  repeated string recipes = 6;
  int32 spicy = 7;
  int32 price = 8;
  float discount = 9;
  int32 quantity = 10;
  string size = 11;
  int32 notation = 12;
  int64 likes = 13;
  string placeid = 14;
  string placename = 15;
  string placelogo = 16;
  string placezone = 17;
  Coordinate location = 18;
  Picture picture = 19;
  bool menu_available = 20;
}

message ListResponse {
  int32 status = 1;
  string error = 2;
  int64 total = 3;
  repeated Product payload = 4;
}

message CreateRequest {
  Product payload = 1;
}

message CreateResponse {
  int32 status = 1;
  string error = 2;
  bool payload = 3;
}

message DetailRequest {
  string id = 4;
}

message DetailResponse {
  int32 status = 1;
  string error = 2;
  Product payload = 3;
}

message UpdateRequest {
  string id = 1;
  Product payload = 2;
}

message UpdateResponse {
  int32 status = 1;
  string error = 2;
  bool payload = 3;
}

message DeleteRequest {
  string id = 3;
}

message DeleteResponse {
  int32 status = 1;
  string error = 2;
  bool payload = 3;
}

message SearchParams {
  string q = 1;
  int32 from = 2;
  int32 to = 3;
  string fromdate = 4;
  string todate = 5;
  repeated string category = 6;
}

service ProductService {
  rpc Search(SearchParams) returns (ListResponse);
  rpc GetDetail(DetailRequest) returns (DetailResponse);
  rpc AddProduct(CreateRequest) returns (CreateResponse);
  rpc UpdateProduct(UpdateRequest) returns (UpdateResponse);
  rpc DeleteProduct(DeleteRequest) returns (DeleteResponse);
}